--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -8,7 +8,7 @@ builds:
     flags:
       - -trimpath
     ldflags:
-      - '-s -w -X main.Tag={{.Version}} -X main.Commit={{.Commit}}'
+      - '-s -w -X main.BuildTag={{.Version}} -X main.BuildCommit={{.Commit}} -X main.BuildDate={{.Date}}'
     goos:
       - freebsd
       - windows
@@ -31,6 +31,3 @@ archives:
 checksum:
   name_template: '{{ .ProjectName }}_{{ .Version }}_SHA256SUMS'
   algorithm: sha256
-release:
-  # If you want to manually examine the release before its live, uncomment this line:
-  # draft: true
